--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-      <link rel="stylesheet" href="assets/index_style.css">
+      <link rel="stylesheet" href="WebVisualizations/assets/index_style.css">
     </head>
 <body>
 
@@ -25,17 +25,17 @@
                 Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="max_temp.html">Max Temperature</a>
-                <a class="dropdown-item" href="humidity.html">Humidity</a>
-                <a class="dropdown-item" href="clouds.html">Cloudiness</a>
-                <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+                <a class="dropdown-item" href="WebVisualizations/max_temp.html">Max Temperature</a>
+                <a class="dropdown-item" href="WebVisualizations/humidity.html">Humidity</a>
+                <a class="dropdown-item" href="WebVisualizations/clouds.html">Cloudiness</a>
+                <a class="dropdown-item" href="WebVisualizations/wind_speed.html">Wind Speed</a>
                 </div>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="comparison.html">Comparison</a>
+            <a class="nav-link" href="WebVisualizations/comparison.html">Comparison</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="cities_data.html">Data</a>
+            <a class="nav-link" href="WebVisualizations/cities_data.html">Data</a>
             </li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
             <div class="col-sm-12 col-md-8" id="summary">
                 <h1 id="summary_header">Summary: Latitude vs. X</h1>
                 <hr>
-                <img class="summary-img" src="visualizations/Fig1.png" width="200" height="200">
+                <img class="summary-img" src="WebVisualizations/visualizations/Fig1.png" width="200" height="200">
                 <p>                    
                     The goal of this project was to analyze how weather patterns change as we move closer to the equator. 
                     In order to complete this anaylsis, we extracted data from the OpenWeatherMap API and created a dataset where we observed different aspects 
@@ -63,10 +63,10 @@
                 <section class="visuals-section">
                     <h1>Visualizations</h1>
                     <hr>
-                    <img id="sm_max_temp_fig" class="figs" src="visualizations/Fig1.png" width="120" height="120">
-                    <img id="sm_humidity_fig" class="figs" src="visualizations/Fig2.png" width="120" height="120">
-                    <img id="sm_clouds_fig" class="figs" src="visualizations/Fig3.png" width="120" height="120">
-                    <img id="sm_windspeed_fig" class="figs" src="visualizations/Fig4.png" width="120" height="120">
+                    <img id="sm_max_temp_fig" class="figs" src="WebVisualizations/visualizations/Fig1.png" width="120" height="120">
+                    <img id="sm_humidity_fig" class="figs" src="WebVisualizations/visualizations/Fig2.png" width="120" height="120">
+                    <img id="sm_clouds_fig" class="figs" src="WebVisualizations/visualizations/Fig3.png" width="120" height="120">
+                    <img id="sm_windspeed_fig" class="figs" src="WebVisualizations/visualizations/Fig4.png" width="120" height="120">
                 </section>
             </div>
         </div>
